@@ -126,8 +126,7 @@
         'Remember QR size': [false, 'Remember the size of the Quick reply (Firefox only).'],
         'Remember Subject': [false, 'Remember the subject field, instead of resetting after posting.'],
         'Remember Spoiler': [false, 'Remember the spoiler state, instead of resetting after posting.'],
-        'Hide Original Post Form': [true, 'Replace the normal post form with a shortcut to open the QR.'],
-        'Preserve Whitespace': [true, 'Ensure original whitespace and indentation are preserved in posts']
+        'Hide Original Post Form': [true, 'Replace the normal post form with a shortcut to open the QR.']
       },
       Quoting: {
         'Quote Backlinks': [true, 'Add quote backlinks'],
@@ -2034,13 +2033,6 @@
         recaptcha_challenge_field: challenge,
         recaptcha_response_field: response + ' '
       };
-      if (Conf['Preserve Whitespace']) {
-        post.com = post.com.replace(/\t/g, '\xa0\xa0\xa0\xa0\xa0\xa0\xa0\xa0').replace(/^ +| {2,}/gm, function(it) {
-          return it.replace(/ /g, '\xa0');
-        }).replace(/\n{3,}/g, function(it) {
-          return it.replace(/\n/g, '\n\x85');
-        });
-      }
       form = new FormData();
       for (name in post) {
         val = post[name];
