@@ -1,4 +1,6 @@
 master
+- aeosynth
+  rm whitespace preserveration (fuck you moot)
 
 3.4.0
 - queue
